manifests/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: cdi-uploadproxy-nodeport
  namespace: cdi
spec:
  type: NodePort
  selector:
    cdi.kubevirt.io: cdi-uploadproxy
  ports:
    - name: uploadproxy
      port: 443
      targetPort: uploadproxy
      nodePort: 30001
