manifests/svclb.yaml
apiVersion: v1
kind: Service
metadata:
  name: cdi-uploadproxy-svclb
  namespace: cdi
spec:
  selector:
    cdi.kubevirt.io: cdi-uploadproxy
  ports:
    - protocol: TCP
      port: 5443
      targetPort: 8443 
  type: LoadBalancer
