manifests/ing.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata:
  name: cdi-uploadproxy-ing
  namespace: cdi
  annotations:
    traefik.tcp.routers/tls.passthrough: true
spec:
  rules:
    - http:
        paths:
        - path: /healthz
          pathType: Prefix
          backend:
            service: 
              name: cdi-uploadproxy-svclb
              port:
                number: 5443
  tls:
    - hosts:
      - my.crazy.host
